<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddBusinessCardActivity">

    <ImageButton
        android:id="@+id/add_close_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/actionBarItemBackground"
        android:src="@drawable/icon_close"
        app:layout_constraintBottom_toBottomOf="@+id/add_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/label_new_card"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/add_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_name_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_phone_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/add_phone_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_phone_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/add_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_phone_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_email_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_company_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/add_company_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_company_name_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_photo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:text="@string/add_image_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_company_name_layout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/add_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo_label"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_photo_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/purple_app"
        android:fontFamily="sans-serif"
        android:text="@string/add_gallery_photo_btn"
        app:icon="@drawable/icon_add_photo_gallery"
        app:iconSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_image_view"
        app:layout_constraintTop_toTopOf="@id/add_image_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_photo_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/purple_app"
        android:fontFamily="sans-serif"
        android:text="@string/add_camera_photo_btn"
        app:icon="@drawable/icon_add_photo_camera"
        app:iconSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_image_view"
        app:layout_constraintTop_toBottomOf="@+id/add_photo_gallery" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_card_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/purple_app"
        android:fontFamily="sans-serif"
        android:text="@string/add_card_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_image_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_card"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:fontFamily="sans-serif"
        app:icon="@drawable/icon_done"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        android:background="@drawable/button_shape"
        app:backgroundTint=""
        android:text="@string/add_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>